MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/SOInstallmentsArchive__c.object-meta.xml
<CustomObject>
    <label>SOInstallmentsArchive</label>
    <nameField>
        <displayFormat>SOIA-{00000000}</displayFormat>
        <label>SOInstallmentsArchive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOInstallmentsArchives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>