MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/Broker_Payout__c.field-meta.xml
<CustomField>
    <fullName>Broker_Payout__c</fullName>
    <label>Broker Payout %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>