MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/Instalment_Number__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instalment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>