MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/Instalment_Payment_Due_Date_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Payment_Due_Date_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instalment Payment Due Date Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>