MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/Is_Handover_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_Handover_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Handover Payment</label>
    <type>Checkbox</type>
</CustomField>