MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>