MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/Milestone_Installment__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>SOInstallmentsArchives</relationshipLabel>
    <relationshipName>SOInstallmentsArchives</relationshipName>
    <type>Lookup</type>
</CustomField>