MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/MilestoneDescription__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestone Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>