MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/MilestoneDescriptionArabic__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDescriptionArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestone Description Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>