MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/MilestoneDescriptionArabicSPA__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDescriptionArabicSPA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestone Description Arabic SPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>