MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/Old_Sales_order__c.field-meta.xml
<CustomField>
    <fullName>Old_Sales_order__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Sales order</label>
    <length>20</length>
    <type>Text</type>
</CustomField>