MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/Old_SOInstallment_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_SOInstallment_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old SOInstallment ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>