MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/Payment_Installments__c.field-meta.xml
<CustomField>
    <fullName>Payment_Installments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Installments</label>
    <referenceTo>PaymentInstallements__c</referenceTo>
    <relationshipLabel>SOInstallmentsArchives</relationshipLabel>
    <relationshipName>SOInstallmentsArchives</relationshipName>
    <type>Lookup</type>
</CustomField>