MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/Sales_Agent_Payout__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agent_Payout__c</fullName>
    <label>Sales Agent Payout %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>