MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>SOInstallmentsArchives</relationshipLabel>
    <relationshipName>SOInstallmentsArchives</relationshipName>
    <type>Lookup</type>
</CustomField>