MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/SendPaymentReminder__c.field-meta.xml
<CustomField>
    <fullName>SendPaymentReminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Payment Reminder</label>
    <type>Checkbox</type>
</CustomField>