MODON MRE BPDEV/force-app/main/default/objects/SOInstallmentsArchive__c/fields/SPA_Infra__c.field-meta.xml
<CustomField>
    <fullName>SPA_Infra__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA_Infra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>